# oarepo-oidc-einfra

./: .copyright.tmpl  .editorconfig  .gitignore  .perun_constants.yaml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.md  format.sh  oarepo.yaml  pyproject.toml  ruff.toml  run-tests.sh  setup.cfg  setup.py  test-setup.sh
.github/workflows/: build.yaml  push.yaml
docs/: jwk2pem.py
oarepo_oidc_einfra/: __init__.py  cli.py  communities.py  config.py  encryption.py  ext.py  global_roles.py  mutex.py  proxies.py  remote.py  resources.py  tasks.py  views.py
oarepo_oidc_einfra/perun/: __init__.py  api.py  dump.py  mapping.py  oidc.py
oarepo_oidc_einfra/services/: __init__.py
oarepo_oidc_einfra/services/components/: aai_communities.py  aai_invitations.py
oarepo_oidc_einfra/services/requests/: __init__.py  invitation.py
oarepo_oidc_einfra/templates/oarepo/invenio_oauthclient/settings/: index.html
oarepo_oidc_einfra/translations/: messages.pot
oarepo_oidc_einfra/translations/cs/LC_MESSAGES/: messages.mo  messages.po
oarepo_oidc_einfra/translations/en/LC_MESSAGES/: messages.mo  messages.po
oidc_einfra/: __init__.py  aai_communities.py  cli.py  communities.py  ext.py  jwk2pem.py  models.py  proxies.py  remote.py  utils.py  version.py
oidc_einfra/alembic/: cae29cd0782e_create_oidc_einfra_branch.py  ef4ac53e2dcf_create_aai_community_table.py
oidc_einfra/perun_api/: __init__.py  api.py  conn.py
oidc_einfra/perun_api/objects/: __init__.py  base.py  group.py  user.py  vo.py
tests/: __init__.py  conftest.py  constants_template.yaml  manifest.json  test_invitations.py  test_login.py  test_low_level_perun_api.py  test_perun_groups.py  test_perun_sync_task.py  test_store_aai_payload.py  test_store_dump.py  test_update_from_perun_dump.py  test_user_service.py
tests/dump_data/: 1.json  2.json  3.json  4.json  5.json  6.json
tests/request_data/: test_add_user_to_group.yaml  test_create_group.yaml  test_create_group_existing.yaml  test_create_resource_for_group.yaml  test_create_resource_for_group_existing.yaml  test_initial_sync_community  test_initial_sync_community.yaml  test_invite_user_to_group.yaml  test_replace_resource_capability.yaml  test_with_communities.yaml
