[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oarepo-oidc-einfra"
dynamic = ["version"]
description = "E-infra OIDC Auth backend for OARepo"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13,<3.14"
dependencies = [
    "oarepo[rdm,tests]>=14,<15",
    "oarepo-runtime",
    "boto3",
    "urnparse",
    "tqdm",
]


[project.optional-dependencies]
dev = [
    "oarepo-invenio-typing-stubs",
]
tests = [
    "pytest-invenio",
    "responses",
]
oarepo14 = [
    "oarepo[rdm,tests]>=14,<15",
]

[project.entry-points."invenio_access.actions"]
"upload_dump.actions" = "oarepo_oidc_einfra.resources:upload_dump_action"

[project.entry-points."invenio_base.api_apps"]
oarepo_oidc_einfra = "oarepo_oidc_einfra.ext:EInfraOIDCApp"

[project.entry-points."invenio_base.api_blueprints"]
oarepo_oidc_einfra = "oarepo_oidc_einfra.resources:create_api_blueprint"

[project.entry-points."invenio_base.apps"]
oarepo_oidc_einfra = "oarepo_oidc_einfra.ext:EInfraOIDCApp"

[project.entry-points."invenio_base.blueprints"]
oarepo_oidc_einfra = "oarepo_oidc_einfra.resources:create_ui_blueprint"

[project.entry-points."invenio_i18n.translations"]
oarepo_oidc_einfra = "oarepo_oidc_einfra"

[project.entry-points."invenio_requests.types"]
aai-community-invitation = "oarepo_oidc_einfra.services.requests.invitation:AAICommunityInvitation"

[project.urls]
Homepage = "https://github.com/oarepo/oarepo-oidc-einfra"
Source = "https://github.com/oarepo/oarepo-oidc-einfra"

[tool.hatch.version]
path = "oarepo_oidc_einfra/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/oarepo_oidc_einfra",
]
