[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oarepo-oidc-einfra"
version = "3.0.1"
description = "E-infra OIDC Auth backend for OARepo"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14,<3.15"
dependencies = [
    "oarepo[rdm,tests]>=14,<15",
    "oarepo-runtime>=3.0.0,<4.0.0",
    "boto3",
    "urnparse",
    "tqdm",

    # invenio dependencies
    "invenio-communities>=25.0.0,<26.0.0",
]


[project.optional-dependencies]
dev = [
    "oarepo-invenio-typing-stubs",
]
tests = [
    "pytest-invenio",
    "responses",

    # invenio dependencies
    "invenio-app>=3.0.0,<4.0.0",
    "invenio-oauth2server>=4.0.0,<5.0.0",
]
oarepo14 = [
    "oarepo[rdm,tests]>=14,<15",
]

[project.entry-points."invenio_access.actions"]
"upload_dump.actions" = "oarepo_oidc_einfra.resources:upload_dump_action"

[project.entry-points."invenio_base.api_apps"]
oarepo_oidc_einfra = "oarepo_oidc_einfra.ext:EInfraOIDCApp"

[project.entry-points."invenio_base.api_blueprints"]
oarepo_oidc_einfra = "oarepo_oidc_einfra.resources:create_api_blueprint"

[project.entry-points."invenio_base.apps"]
oarepo_oidc_einfra = "oarepo_oidc_einfra.ext:EInfraOIDCApp"

[project.entry-points."invenio_base.blueprints"]
oarepo_oidc_einfra = "oarepo_oidc_einfra.resources:create_ui_blueprint"

[project.entry-points."invenio_i18n.translations"]
oarepo_oidc_einfra = "oarepo_oidc_einfra"

[project.entry-points."invenio_requests.types"]
aai-community-invitation = "oarepo_oidc_einfra.services.requests.invitation:AAICommunityInvitation"

[project.urls]
Homepage = "https://github.com/oarepo/oarepo-oidc-einfra"
Source = "https://github.com/oarepo/oarepo-oidc-einfra"

[tool.hatch.build.targets.sdist]
include = [
    "/oarepo_oidc_einfra",
]
