[metadata]
name = oarepo-oidc-einfra
version = 1.0.0
description = E-infra OIDC Auth backend for OARepo
authors = Miroslav Bauer <bauer@cesnet.cz>, Juraj Trappl <trappl@cesnet.cz>
readme = README.md
long_description = file:README.md
long_description_content_type = text/markdown

packages = find:
include_package_data = True

[options]
python = >=3.9
install_requires =
    oarepo-communities

[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2, *.po, *.mo, *.pot, *.js, *.jsx, *.less, *.jinja

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
devs =
    check-manifest
    black
    isort
    autoflake
tests =
    pytest-invenio
    oarepo>=12
