[metadata]
name = oarepo-oidc-einfra
version = 1.3.1
description = E-infra OIDC Auth backend for OARepo
authors = Miroslav Bauer <bauer@cesnet.cz>, Juraj Trappl <trappl@cesnet.cz>, Miroslav Simek <miroslav.simek@cesnet.cz>
readme = README.md
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/oarepo/oidc-einfra
project_urls =
    Source = https://github.com/oarepo/oarepo-oidc-einfra

packages = find:
include_package_data = True

[options]
python = >=3.10
install_requires =
    oarepo-runtime
    oarepo-communities
    ; remove the oarepo-requests and oarepo-global-search dependency when bug BE-436 and BE-437 are fixed
    oarepo-requests
    oarepo-global-search
    oarepo-workflows
    urnparse


[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2, *.po, *.mo, *.pot, *.js, *.jsx, *.less, *.jinja

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
dev =
    check-manifest
    black
    isort
    autoflake
    licenseheaders
    ruff
tests =
    pytest-invenio
    responses

[options.entry_points]
invenio_base.apps =
    oarepo_oidc_einfra = oarepo_oidc_einfra.ext:EInfraOIDCApp
invenio_base.api_apps =
    oarepo_oidc_einfra = oarepo_oidc_einfra.ext:EInfraOIDCApp
invenio_access.actions =
    upload_dump.actions = oarepo_oidc_einfra.resources:upload_dump_action
invenio_base.blueprints =
    oarepo_oidc_einfra = oarepo_oidc_einfra.resources:create_ui_blueprint
invenio_base.api_blueprints =
    oarepo_oidc_einfra = oarepo_oidc_einfra.resources:create_api_blueprint
invenio_requests.types =
    aai-community-invitation = oarepo_oidc_einfra.services.requests.invitation:AAICommunityInvitation
invenio_i18n.translations = 
    oarepo_oidc_einfra = oarepo_oidc_einfra